Update command data for Toyota/Tundra

--- a/tests/test_cases/2015/commands/7B0.7B8.2103.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2103.yaml
@@ -14,3 +14,15 @@ test_cases:
     TOYOTA_TIRE_RL_SPD: 0
     TOYOTA_TIRE_RR_SPD: 0
   response: 7B806610300000000
+- expected_values:
+    TOYOTA_TIRE_FL_SPD: 93.44
+    TOYOTA_TIRE_FR_SPD: 94.72
+    TOYOTA_TIRE_RL_SPD: 93.44
+    TOYOTA_TIRE_RR_SPD: 93.44
+  response: 7B80661034A494949
+- expected_values:
+    TOYOTA_TIRE_FL_SPD: 94.72
+    TOYOTA_TIRE_FR_SPD: 94.72
+    TOYOTA_TIRE_RL_SPD: 94.72
+    TOYOTA_TIRE_RR_SPD: 94.72
+  response: 7B80661034A4A4A4A
