--- a/tests/test_cases/2015/commands/7B0.7B8.211D.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.211D.yaml
@@ -6,3 +6,7 @@ test_cases:
   response: |-
     211D
     7B803611D00
+- expected_values:
+    TOYOTA_MAIN_IDLE_SW: 0
+    TOYOTA_RESERVOIR_WARNING_SW: 0
+  response: 7B803611D00
