--- a/tests/test_cases/2015/commands/7B0.7B8.211F.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.211F.yaml
@@ -6,3 +6,11 @@ test_cases:
   response: |-
     211F
     7B803611F00
+- expected_values:
+    TOYOTA_PARKING_BRAKE_SW: 0
+    TOYOTA_STOP_LIGHT_SW: 0
+  response: 7B803611F00
+- expected_values:
+    TOYOTA_PARKING_BRAKE_SW: 0
+    TOYOTA_STOP_LIGHT_SW: 1
+  response: 7B803611F80
