--- a/tests/test_cases/2015/commands/7B0.7B8.2142.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2142.yaml
@@ -8,3 +8,33 @@ test_cases:
   response: |-
     2142
     7B806614200000000
+- expected_values:
+    TOYOTA_FL_ACC: 0
+    TOYOTA_FR_ACC: 0
+    TOYOTA_RL_ACC: 0
+    TOYOTA_RR_ACC: 0
+  response: 7B806614200000000
+- expected_values:
+    TOYOTA_FL_ACC: 0
+    TOYOTA_FR_ACC: 0
+    TOYOTA_RL_ACC: 255
+    TOYOTA_RR_ACC: 0
+  response: 7B8066142000000FF
+- expected_values:
+    TOYOTA_FL_ACC: 0
+    TOYOTA_FR_ACC: 0
+    TOYOTA_RL_ACC: 0
+    TOYOTA_RR_ACC: 255
+  response: 7B80661420000FF00
+- expected_values:
+    TOYOTA_FL_ACC: 255
+    TOYOTA_FR_ACC: 0
+    TOYOTA_RL_ACC: 0
+    TOYOTA_RR_ACC: 0
+  response: 7B806614200FF0000
+- expected_values:
+    TOYOTA_FL_ACC: 0
+    TOYOTA_FR_ACC: 255
+    TOYOTA_RL_ACC: 0
+    TOYOTA_RR_ACC: 0
+  response: 7B8066142FF000000
