--- a/tests/test_cases/2015/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2147.yaml
@@ -12,20 +12,44 @@ test_cases:
     7B8076147FF01808069
 - expected_values:
     TOYOTA_LAT_G: 0
-    TOYOTA_LNG_G: 0.02
-    TOYOTA_STEERING_ANGLE: -21
-    TOYOTA_STEER_ANGLE: -21
+    TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -3
+    TOYOTA_STEER_ANGLE: -3
     TOYOTA_YAW: 0
     TOYOTA_YAW_RATE_V2: 0
-  response: 7B80761470001807F2E
+  response: 7B80761470000807FE2
+- expected_values:
+    TOYOTA_LAT_G: 0
+    TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: 0
+    TOYOTA_STEER_ANGLE: 0
+    TOYOTA_YAW: 0
+    TOYOTA_YAW_RATE_V2: 0
+  response: 7B80761470000808000
+- expected_values:
+    TOYOTA_LAT_G: 0.02
+    TOYOTA_LNG_G: -0.02
+    TOYOTA_STEERING_ANGLE: -1.5
+    TOYOTA_STEER_ANGLE: -1.5
+    TOYOTA_YAW: 0
+    TOYOTA_YAW_RATE_V2: 0
+  response: 7B807614701FF807FF1
+- expected_values:
+    TOYOTA_LAT_G: -0.2
+    TOYOTA_LNG_G: -0.06
+    TOYOTA_STEERING_ANGLE: -340.5
+    TOYOTA_STEER_ANGLE: -340.5
+    TOYOTA_YAW: -20
+    TOYOTA_YAW_RATE_V2: -20
+  response: 7B8076147F6FD6C72B3
 - expected_values:
     TOYOTA_LAT_G: -0.02
-    TOYOTA_LNG_G: 0.02
-    TOYOTA_STEERING_ANGLE: -28.5
-    TOYOTA_STEER_ANGLE: -28.5
+    TOYOTA_LNG_G: 0
+    TOYOTA_STEERING_ANGLE: -9
+    TOYOTA_STEER_ANGLE: -9
     TOYOTA_YAW: 0
     TOYOTA_YAW_RATE_V2: 0
-  response: 7B8076147FF01807EE3
+  response: 7B8076147FF00807FA6
 - expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0.02
@@ -37,8 +61,8 @@ test_cases:
 - expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0.02
-    TOYOTA_STEERING_ANGLE: -21
-    TOYOTA_STEER_ANGLE: -21
+    TOYOTA_STEERING_ANGLE: 30
+    TOYOTA_STEER_ANGLE: 30
     TOYOTA_YAW: 0
     TOYOTA_YAW_RATE_V2: 0
-  response: 7B8076147FF01807F2E
+  response: 7B8076147FF0180812C
