--- a/tests/test_cases/2015/commands/7B0.7B8.215F.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.215F.yaml
@@ -12,3 +12,13 @@ test_cases:
   response: |-
     215F
     7B804615F0000
+- expected_values:
+    TOYOTA_BA_CTRL_STATUS: 0
+    TOYOTA_FL_WHEEL_ABS_CTRL_STATUS: 0
+    TOYOTA_FR_WHEEL_ABS_CTRL_STATUS: 0
+    TOYOTA_PBA_CTRL_STATUS: 0
+    TOYOTA_RL_WHEEL_ABS_CTRL_STATUS: 0
+    TOYOTA_RL_WHEEL_EBD_CTRL_STATUS: 0
+    TOYOTA_RR_WHEEL_ABS_CTRL_STATUS: 0
+    TOYOTA_RR_WHEEL_EBD_CTRL_STATUS: 0
+  response: 7B804615F0000
