--- a/tests/test_cases/2015/commands/7B0.7B8.21A6.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.21A6.yaml
@@ -5,3 +5,6 @@ test_cases:
   response: |-
     21A6
     7B80461A60000
+- expected_values:
+    TOYOTA_INSPECTION_MODE: 0
+  response: 7B80461A60000
