--- a/tests/test_cases/2015/commands/7C0.7C8.2112.yaml
+++ b/tests/test_cases/2015/commands/7C0.7C8.2112.yaml
@@ -7,3 +7,8 @@ test_cases:
   response: |-
     2112
     7C80461120000
+- expected_values:
+    TOYOTA_CHECK_ENGINE: 0
+    TOYOTA_P_SEATBELT_BUCKLE: 0
+    TOYOTA_TAIL_CANCEL: 0
+  response: 7C80461120000
