--- a/tests/test_cases/2015/commands/7C0.7C8.2123.yaml
+++ b/tests/test_cases/2015/commands/7C0.7C8.2123.yaml
@@ -5,3 +5,9 @@ test_cases:
   response: |-
     2123
     7C8036123AE
+- expected_values:
+    TOYOTA_COOLANT_T: 0
+  response: 7C803612300
+- expected_values:
+    TOYOTA_COOLANT_T: 91
+  response: 7C8036123B6
