--- a/tests/test_cases/2015/commands/7C4.2124.yaml
+++ b/tests/test_cases/2015/commands/7C4.2124.yaml
@@ -10,3 +10,18 @@ test_cases:
   response: |-
     21241
     7CC03612404
+- expected_values:
+    TOYOTA_D_SIDE_: 4
+  response: 7CC03612404
+- expected_values:
+    TOYOTA_D_SIDE_: 5
+  response: 7CC03612405
+- expected_values:
+    TOYOTA_D_SIDE_: 6
+  response: 7CC03612406
+- expected_values:
+    TOYOTA_D_SIDE_: 7
+  response: 7CC03612407
+- expected_values:
+    TOYOTA_D_SIDE_: 8
+  response: 7CC03612408
