--- a/tests/test_cases/2015/commands/7C4.7CC.213C.yaml
+++ b/tests/test_cases/2015/commands/7C4.7CC.213C.yaml
@@ -10,3 +10,9 @@ test_cases:
   response: |-
     213C1
     7CC03613C07
+- expected_values:
+    TOYOTA_BLOWER_MOTOR_SPEED_LEVEL: 0
+  response: 7CC03613C00
+- expected_values:
+    TOYOTA_BLOWER_MOTOR_SPEED_LEVEL: 29
+  response: 7CC03613C1D
