--- a/tests/test_cases/2015/commands/7E0.0131.yaml
+++ b/tests/test_cases/2015/commands/7E0.0131.yaml
@@ -11,3 +11,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 870
   response: '7E80441310366'
+- expected_values:
+    CLR_DIST: 967
+  response: 7E804413103C7
