--- a/tests/test_cases/2015/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2015/commands/7E0.7E8.2101.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
-    TOYOTA_ACCEL_SENS__NO_1_VOLT: 16.47059
-    TOYOTA_ACCEL_SENS__NO_2_VOLT: 5.88235
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
     TOYOTA_AMBIENT_T_V2: 86
     TOYOTA_ATMOSPHERE_PRESSURE: 11
     TOYOTA_CALCULATED_LOAD_7E0: 25.09804
@@ -15,7 +15,7 @@ test_cases:
     TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
     TOYOTA_THROTTLE_SENSOR_POSITION: 47.84314
     TOYOTA_THROTTLE_SENSOR_VOLT: 15.68627
-    TOYOTA_THROTTL_SENSOR__2_VOLT: 31.76471
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
     TOYOTA_TIME_AFTER_DTC_CLEARED: 13261
     TOYOTA_VEHICLE_LOAD: 0.04273
     TOYOTA_VEHICLE_SPEED: 173
@@ -27,3 +27,471 @@ test_cases:
     7E82203AD002A7A2851
     7E8232A0F03B003B333
     7E824CD000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.21569
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 86
+    TOYOTA_ATMOSPHERE_PRESSURE: 0
+    TOYOTA_CALCULATED_LOAD_7E0: 0
+    TOYOTA_COOLANT_TEMP: 0
+    TOYOTA_ENGINE_RUN_TIME: 305
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 42
+    TOYOTA_MAF: 192
+    TOYOTA_MAP: 51
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.76471
+    TOYOTA_THROTTLE_SENSOR_VOLT: 15.68627
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 12871
+    TOYOTA_VEHICLE_LOAD: 0
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610100000000
+    7E821C033527E000000
+    7E82200000131842851
+    7E823311003C703F232
+    7E82447000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 89
+    TOYOTA_ATMOSPHERE_PRESSURE: 13
+    TOYOTA_CALCULATED_LOAD_7E0: 21.56863
+    TOYOTA_COOLANT_TEMP: 65
+    TOYOTA_ENGINE_RUN_TIME: 42
+    TOYOTA_ENGINE_SPEED: 10244
+    TOYOTA_INTAKE_AIR: 42
+    TOYOTA_MAF: 523
+    TOYOTA_MAP: 47
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 48.23529
+    TOYOTA_THROTTLE_SENSOR_VOLT: 15.68627
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13652
+    TOYOTA_VEHICLE_LOAD: 0.0412
+    TOYOTA_VEHICLE_SPEED: 185
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610137001B02
+    7E8210B2F52810D4128
+    7E82204B9002A7B2851
+    7E8232A1003C703F135
+    7E82454000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 16.47059
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 88
+    TOYOTA_ATMOSPHERE_PRESSURE: 12
+    TOYOTA_CALCULATED_LOAD_7E0: 23.92157
+    TOYOTA_COOLANT_TEMP: 99
+    TOYOTA_ENGINE_RUN_TIME: 42
+    TOYOTA_ENGINE_SPEED: 3588
+    TOYOTA_INTAKE_AIR: 42
+    TOYOTA_MAF: 512
+    TOYOTA_MAP: 48
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 48.23529
+    TOYOTA_THROTTLE_SENSOR_VOLT: 15.68627
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13496
+    TOYOTA_VEHICLE_LOAD: 0.04425
+    TOYOTA_VEHICLE_SPEED: 215
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61013D001D02
+    7E821003052800C630E
+    7E82204D7002A7B2851
+    7E8232A1003C703F134
+    7E824B8000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.60784
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 89
+    TOYOTA_ATMOSPHERE_PRESSURE: 23
+    TOYOTA_CALCULATED_LOAD_7E0: 29.01961
+    TOYOTA_COOLANT_TEMP: 121
+    TOYOTA_ENGINE_RUN_TIME: 1073
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.76471
+    TOYOTA_THROTTLE_SENSOR_VOLT: 23.52941
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 39.21569
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13730
+    TOYOTA_VEHICLE_LOAD: 0.06561
+    TOYOTA_VEHICLE_SPEED: 23
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61014A002B05
+    7E821922D5181177959
+    7E82203170431843C64
+    7E823321003BE03EA35
+    7E824A2000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.82353
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
+    TOYOTA_AMBIENT_T_V2: 30
+    TOYOTA_ATMOSPHERE_PRESSURE: 16
+    TOYOTA_CALCULATED_LOAD_7E0: 29.80392
+    TOYOTA_COOLANT_TEMP: 100
+    TOYOTA_ENGINE_RUN_TIME: 48
+    TOYOTA_ENGINE_SPEED: 6144
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 51
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 50.98039
+    TOYOTA_THROTTLE_SENSOR_VOLT: 15.68627
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13867
+    TOYOTA_VEHICLE_LOAD: 0.07019
+    TOYOTA_VEHICLE_SPEED: 91
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61014C002E04
+    7E82137335146106418
+    7E822005B0030822851
+    7E823300F03B003DE36
+    7E8242B000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.43137
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 88
+    TOYOTA_ATMOSPHERE_PRESSURE: 18
+    TOYOTA_CALCULATED_LOAD_7E0: 30.98039
+    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_ENGINE_RUN_TIME: 815
+    TOYOTA_ENGINE_SPEED: 9988
+    TOYOTA_INTAKE_AIR: 42
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 47
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 50.58824
+    TOYOTA_THROTTLE_SENSOR_VOLT: 22.35294
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 38.43137
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13671
+    TOYOTA_VEHICLE_LOAD: 0.05951
+    TOYOTA_VEHICLE_SPEED: 155
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61014F002704
+    7E8211E2F528012EB27
+    7E822049B032F813962
+    7E8232F1003C703F035
+    7E82467000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.96078
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
+    TOYOTA_AMBIENT_T_V2: 69
+    TOYOTA_ATMOSPHERE_PRESSURE: 25
+    TOYOTA_CALCULATED_LOAD_7E0: 40.39216
+    TOYOTA_COOLANT_TEMP: 3
+    TOYOTA_ENGINE_RUN_TIME: 1847
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 54.90196
+    TOYOTA_THROTTLE_SENSOR_VOLT: 25.09804
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 40.78431
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13828
+    TOYOTA_VEHICLE_LOAD: 0.09613
+    TOYOTA_VEHICLE_SPEED: 87
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610167003F08
+    7E821D02D516D19035E
+    7E822015707378C4068
+    7E823380F03B503E236
+    7E82404000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.21569
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
+    TOYOTA_AMBIENT_T_V2: 29
+    TOYOTA_ATMOSPHERE_PRESSURE: 13
+    TOYOTA_CALCULATED_LOAD_7E0: 40.78431
+    TOYOTA_COOLANT_TEMP: 131
+    TOYOTA_ENGINE_RUN_TIME: 305
+    TOYOTA_ENGINE_SPEED: 768
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 51
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.76471
+    TOYOTA_THROTTLE_SENSOR_VOLT: 15.68627
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13847
+    TOYOTA_VEHICLE_LOAD: 0.10071
+    TOYOTA_VEHICLE_SPEED: 61
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610168004204
+    7E821FE3351450D8303
+    7E822003D0131842851
+    7E823310F03B003DE36
+    7E82417000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.17647
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 89
+    TOYOTA_ATMOSPHERE_PRESSURE: 22
+    TOYOTA_CALCULATED_LOAD_7E0: 42.35294
+    TOYOTA_COOLANT_TEMP: 64
+    TOYOTA_ENGINE_RUN_TIME: 3126
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 54.11765
+    TOYOTA_THROTTLE_SENSOR_VOLT: 25.09804
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 40.78431
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13710
+    TOYOTA_VEHICLE_LOAD: 0.09918
+    TOYOTA_VEHICLE_SPEED: 95
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61016C004108
+    7E821062D5181164054
+    7E822045F0C368A4068
+    7E823361003C603EF35
+    7E8248E000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.56863
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 83
+    TOYOTA_ATMOSPHERE_PRESSURE: 19
+    TOYOTA_CALCULATED_LOAD_7E0: 42.35294
+    TOYOTA_COOLANT_TEMP: 186
+    TOYOTA_ENGINE_RUN_TIME: 2615
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 54.5098
+    TOYOTA_THROTTLE_SENSOR_VOLT: 24.31373
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 40
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13808
+    TOYOTA_VEHICLE_LOAD: 0.11749
+    TOYOTA_VEHICLE_SPEED: 206
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61016C004D08
+    7E8216C2D517B13BA4B
+    7E82201CE0A378B3E66
+    7E823371003B803E435
+    7E824F0000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.17647
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 82
+    TOYOTA_ATMOSPHERE_PRESSURE: 20
+    TOYOTA_CALCULATED_LOAD_7E0: 45.09804
+    TOYOTA_COOLANT_TEMP: 123
+    TOYOTA_ENGINE_RUN_TIME: 2358
+    TOYOTA_ENGINE_SPEED: 15618
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 54.11765
+    TOYOTA_THROTTLE_SENSOR_VOLT: 23.92157
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 40
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13789
+    TOYOTA_VEHICLE_LOAD: 0.10681
+    TOYOTA_VEHICLE_SPEED: 11
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610173004607
+    7E821EF2D517A147B3D
+    7E822020B09368A3D66
+    7E823361003BA03E535
+    7E824DD000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 21.17647
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 83
+    TOYOTA_ATMOSPHERE_PRESSURE: 18
+    TOYOTA_CALCULATED_LOAD_7E0: 45.4902
+    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_ENGINE_RUN_TIME: 2358
+    TOYOTA_ENGINE_SPEED: 12034
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 46
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 54.11765
+    TOYOTA_THROTTLE_SENSOR_VOLT: 25.09804
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 40.78431
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13750
+    TOYOTA_VEHICLE_LOAD: 0.12055
+    TOYOTA_VEHICLE_SPEED: 100
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610174004F08
+    7E821432E517B12E82F
+    7E822026409368A4068
+    7E823361003BB03E735
+    7E824B6000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 22.35294
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 89
+    TOYOTA_ATMOSPHERE_PRESSURE: 23
+    TOYOTA_CALCULATED_LOAD_7E0: 48.23529
+    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_ENGINE_RUN_TIME: 3129
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 55.68627
+    TOYOTA_THROTTLE_SENSOR_VOLT: 25.88235
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 41.96078
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13730
+    TOYOTA_VEHICLE_LOAD: 0.11139
+    TOYOTA_VEHICLE_SPEED: 54
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61017B004909
+    7E821A92D518117F05A
+    7E82203360C398E426B
+    7E823391003BF03EA35
+    7E824A2000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 22.35294
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 87
+    TOYOTA_ATMOSPHERE_PRESSURE: 23
+    TOYOTA_CALCULATED_LOAD_7E0: 48.23529
+    TOYOTA_COOLANT_TEMP: 21
+    TOYOTA_ENGINE_RUN_TIME: 2873
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 55.29412
+    TOYOTA_THROTTLE_SENSOR_VOLT: 25.88235
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 41.56863
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13710
+    TOYOTA_VEHICLE_LOAD: 0.11292
+    TOYOTA_VEHICLE_SPEED: 219
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61017B004A09
+    7E8218B2D517F171557
+    7E82202DB0B398D426A
+    7E823391003BD03E935
+    7E8248E000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 24.70588
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 24
+    TOYOTA_CALCULATED_LOAD_7E0: 54.90196
+    TOYOTA_COOLANT_TEMP: 199
+    TOYOTA_ENGINE_RUN_TIME: 3903
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 58.82353
+    TOYOTA_THROTTLE_SENSOR_VOLT: 26.27451
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 42.35294
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13847
+    TOYOTA_VEHICLE_LOAD: 0.14954
+    TOYOTA_VEHICLE_SPEED: 251
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C61018C00620D
+    7E821762D516418C75D
+    7E82200FB0F3F96436C
+    7E8233F0F03B303E136
+    7E82417000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 27.45098
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
+    TOYOTA_AMBIENT_T_V2: 53
+    TOYOTA_ATMOSPHERE_PRESSURE: 32
+    TOYOTA_CALCULATED_LOAD_7E0: 59.21569
+    TOYOTA_COOLANT_TEMP: 215
+    TOYOTA_ENGINE_RUN_TIME: 5702
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 46
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 61.96078
+    TOYOTA_THROTTLE_SENSOR_VOLT: 29.01961
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 44.70588
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13906
+    TOYOTA_VEHICLE_LOAD: 0.16327
+    TOYOTA_VEHICLE_SPEED: 191
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C610197006B13
+    7E8218C2E515D20EF5D
+    7E82200BF16469E4A72
+    7E823460F03B103E036
+    7E82452000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 26.66667
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 6.27451
+    TOYOTA_AMBIENT_T_V2: 82
+    TOYOTA_ATMOSPHERE_PRESSURE: 30
+    TOYOTA_CALCULATED_LOAD_7E0: 62.7451
+    TOYOTA_COOLANT_TEMP: 20
+    TOYOTA_ENGINE_RUN_TIME: 6468
+    TOYOTA_ENGINE_SPEED: 6914
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 45
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 60.78431
+    TOYOTA_THROTTLE_SENSOR_VOLT: 32.94118
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 48.62745
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13652
+    TOYOTA_VEHICLE_LOAD: 0.15412
+    TOYOTA_VEHICLE_SPEED: 71
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C6101A0006510
+    7E821D52D517A1E141B
+    7E822024719449B547C
+    7E823441003BA03E635
+    7E82454000000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 5.88235
+    TOYOTA_AMBIENT_T_V2: 45
+    TOYOTA_ATMOSPHERE_PRESSURE: 48
+    TOYOTA_CALCULATED_LOAD_7E0: 67.05882
+    TOYOTA_COOLANT_TEMP: 46
+    TOYOTA_ENGINE_RUN_TIME: 8529
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 41
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 47
+    TOYOTA_THROTTLE_MOTOR_DUTY: 1.17647
+    TOYOTA_THROTTLE_SENSOR_POSITION: 67.45098
+    TOYOTA_THROTTLE_SENSOR_VOLT: 35.29412
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 51.37255
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13945
+    TOYOTA_VEHICLE_LOAD: 0.18006
+    TOYOTA_VEHICLE_SPEED: 162
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101C6101AB00761F
+    7E821912F5155302E4A
+    7E82200A22151AC5A83
+    7E823510F03B103DF36
+    7E82479000000000000
