--- a/tests/test_cases/2015/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2015/commands/7E0.7E8.2105.yaml
@@ -7,3 +7,75 @@ test_cases:
     2105
     7E8100C61053F8A1578
     7E82115780F930F9300
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 613
+    TOYOTA_CATALYST_T_B1S2: 613
+  response: |-
+    7E8100C61053FAD1982
+    7E821198215FE15FE00
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 603.2
+    TOYOTA_CATALYST_T_B1S2: 603.2
+  response: |-
+    7E8100C61053FCC1920
+    7E82119201573157300
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 582.1
+    TOYOTA_CATALYST_T_B1S2: 582.1
+  response: |-
+    7E8100C61053FD5184D
+    7E821184D1480148000
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 671.9
+    TOYOTA_CATALYST_T_B1S2: 671.9
+  response: |-
+    7E8100C61053FD51BCF
+    7E8211BCF177A177A00
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 184.3
+    TOYOTA_CATALYST_T_B1S2: 184.3
+  response: |-
+    7E8100C61053FDE08C3
+    7E82108C30659065900
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 319.2
+    TOYOTA_CATALYST_T_B1S2: 319.2
+  response: |-
+    7E8100C61053FDE0E08
+    7E8210E080B030B0300
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 505.5
+    TOYOTA_CATALYST_T_B1S2: 505.5
+  response: |-
+    7E8100C61053FDE154F
+    7E821154F1319131900
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 598.6
+    TOYOTA_CATALYST_T_B1S2: 598.6
+  response: |-
+    7E8100C61053FEB18F2
+    7E82118F215B315B300
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 580.2
+    TOYOTA_CATALYST_T_B1S2: 580.2
+  response: |-
+    7E8100C61053FF8183A
+    7E821183A1495149500
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 584
+    TOYOTA_CATALYST_T_B1S2: 584
+  response: |-
+    7E8100C610540011860
+    7E821186014C914C900
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 562.5
+    TOYOTA_CATALYST_T_B1S2: 562.5
+  response: |-
+    7E8100C6105400A1789
+    7E821178913DF13DF00
+- expected_values:
+    TOYOTA_CATALYST_T_B1S1: 510.4
+    TOYOTA_CATALYST_T_B1S2: 510.4
+  response: |-
+    7E8100C6105403A1580
+    7E82115801152115200
