--- a/tests/test_cases/2015/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2106.yaml
@@ -8,3 +8,27 @@ test_cases:
   response: |-
     2106
     7B80561068081EF
+- expected_values:
+    TOYOTA_YAW_1: -18
+    TOYOTA_YAW_2: -10
+    TOYOTA_YAW_RATE: -18
+    TOYOTA_YAW_RATE2: -10
+  response: 7B80561066E760A
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: 1
+    TOYOTA_YAW_RATE: 0
+    TOYOTA_YAW_RATE2: 1
+  response: 7B805610680812C
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: 1
+    TOYOTA_YAW_RATE: 0
+    TOYOTA_YAW_RATE2: 1
+  response: 7B80561068081FE
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: 2
+    TOYOTA_YAW_RATE: 0
+    TOYOTA_YAW_RATE2: 2
+  response: 7B80561068082B2
