--- a/tests/test_cases/2015/commands/7B0.7B8.213D.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.213D.yaml
@@ -9,3 +9,10 @@ test_cases:
   response: |-
     213D
     7B803613D00
+- expected_values:
+    TOYOTA_ABS_WARN: 0
+    TOYOTA_BRAKE_WARN: 0
+    TOYOTA_BUZZER: 0
+    TOYOTA_ECB_WARN: 0
+    TOYOTA_SLIP_WARN: 0
+  response: 7B803613D00
