--- a/tests/test_cases/2015/commands/7B0.7B8.2146.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.2146.yaml
@@ -9,3 +9,11 @@ test_cases:
     2146
     7B81008614600018186
     7B821FFFF0000000000
+- expected_values:
+    TOYOTA_ZP_DEC: -25.11
+    TOYOTA_ZP_DEC2: -24.91384
+    TOYOTA_ZP_YAW: 1
+    TOYOTA_ZP_YAW_RATE: 1
+  response: |-
+    7B81008614600018186
+    7B821FFFF0000000000
