--- a/tests/test_cases/2015/commands/7B0.7B8.215A.yaml
+++ b/tests/test_cases/2015/commands/7B0.7B8.215A.yaml
@@ -11,3 +11,21 @@ test_cases:
   response: |-
     215A
     7B804615A0000
+- expected_values:
+    TOYOTA_FL_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_FR_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_RL_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_RR_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__BRAKE_CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__ENGINE_CTRL_STATUS: 0
+  response: 7B804615A0000
+- expected_values:
+    TOYOTA_FL_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_FR_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_RL_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_RR_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__BRAKE_CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__ENGINE_CTRL_STATUS: 0
+  response: 7B804615A0800
