--- a/tests/test_cases/2015/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2015/commands/7C0.7C8.2121.yaml
@@ -5,3 +5,9 @@ test_cases:
   response: |-
     21211
     7C803612100
+- expected_values:
+    TOYOTA_VSS_7C0: 0
+  response: 7C803612100
+- expected_values:
+    TOYOTA_VSS_7C0: 95
+  response: 7C80361215F
