--- a/tests/test_cases/2015/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2015/commands/7C4.7CC.213D.yaml
@@ -5,3 +5,15 @@ test_cases:
   response: |-
     213D1
     7CC03613D63
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 2.16
+  response: 7CC03613D67
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 2.48
+  response: 7CC03613D68
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 2.8
+  response: 7CC03613D69
+- expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: 3.12
+  response: 7CC03613D6A
