--- a/tests/test_cases/2015/commands/7E0.7E8.2128.yaml
+++ b/tests/test_cases/2015/commands/7E0.7E8.2128.yaml
@@ -9,8 +9,8 @@ test_cases:
     TOYOTA_ODO: 159543
   response: 7E8056128026F37
 - expected_values:
-    TOYOTA_ODO: 159556
-  response: 7E8056128026F44
+    TOYOTA_ODO: 160510
+  response: 7E80561280272FE
 - expected_values:
-    TOYOTA_ODO: 160415
-  response: 7E805612802729F
+    TOYOTA_ODO: 160512
+  response: '7E8056128027300'
