--- a/tests/test_cases/2025/commands/700.708.221019.yaml
+++ b/tests/test_cases/2025/commands/700.708.221019.yaml
@@ -2,7 +2,7 @@ command_id: 700.708.221019
 test_cases:
 - expected_values:
     TOYOTA_INJECTION: DIRECT
-  response: 7080762101901568AF0
+  response: 70807621019015684B0
 - expected_values:
     TOYOTA_INJECTION: DIRECT
   response: 70807621019015B8000
@@ -14,4 +14,7 @@ test_cases:
   response: '7080762101902078000'
 - expected_values:
     TOYOTA_INJECTION: BOTH
-  response: 7080762101902FA8000
+  response: 70807621019024D8AFF
+- expected_values:
+    TOYOTA_INJECTION: BOTH
+  response: 7080762101902FB8000
