--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -4,6 +4,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 4.9937
     TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.78495
   response: |-
     7E81018610464FA9DCF
@@ -14,6 +15,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 2.61798
     TOYOTA_AF_LAMBDA_B1S1: 0.89484
+    TOYOTA_O2S_B1S2: 0.575
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.92004
   response: |-
     7E810186104765B731D
@@ -24,6 +26,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 4.90348
     TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.95399
   response: |-
     7E8101861047AB99DCF
@@ -34,6 +37,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 4.86423
     TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.97968
   response: |-
     7E8101861047E079DCF
@@ -44,6 +48,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.25196
     TOYOTA_AF_LAMBDA_B1S1: 0.99547
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99128
   response: |-
     7E8101861047F85800F
@@ -86,17 +91,19 @@ test_cases:
 - expected_values:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.29585
-    TOYOTA_AF_LAMBDA_B1S1: 0.99793
-    TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99307
+    TOYOTA_AF_LAMBDA_B1S1: 0.99754
+    TOYOTA_O2S_B1S2: 0.64
+    TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99262
   response: |-
-    7E8101861047FC08060
-    7E821699981216A6180
-    7E82260800081218002
-    7E82390FF9CFF000000
+    7E8101861047FB18053
+    7E821699980C06A1180
+    7E82253800080C08001
+    7E823ABFFA7FF000000
 - expected_values:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 1.4923
     TOYOTA_AF_LAMBDA_B1S1: 0.8093
+    TOYOTA_O2S_B1S2: 0.52
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2681C
@@ -129,6 +136,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.28122
     TOYOTA_AF_LAMBDA_B1S1: 0.99155
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF27F8E
@@ -139,6 +147,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.28122
     TOYOTA_AF_LAMBDA_B1S1: 0.99219
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF27FA3
@@ -149,6 +158,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
     TOYOTA_AF_LAMBDA_B1S1: 0.99486
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF27FFB
@@ -170,6 +180,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
     TOYOTA_AF_LAMBDA_B1S1: 0.9958
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2801A
@@ -180,6 +191,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.31048
     TOYOTA_AF_LAMBDA_B1S1: 0.99738
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2804E
