--- a/tests/test_cases/2019/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2151.yaml
@@ -865,7 +865,30 @@ test_cases:
     7E8248000865C805F00
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 22
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1052.34375
+    TOYOTA_ENG_START_HESIT: 1
     TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 82
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0
+    TOYOTA_ISC_FLOW: 10.84229
+    TOYOTA_ISC_LEARN: 7.98462
+    TOYOTA_ISC_POS: 6.30951
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 22
+    TOYOTA_PREV_TRIP_DST: 2.2
+    TOYOTA_PREV_TRIP_EOT: 82
+    TOYOTA_PREV_TRIP_IAT: 31
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0.03815
+    TOYOTA_VVTOT: 91
+    TOYOTA_VVT_ADV_FAIL: 0
   response: |-
     7E81023615100000543
     7E8210100DC83477A7A
@@ -906,7 +929,30 @@ test_cases:
     7E82480008310807E00
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 15
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1105.46875
+    TOYOTA_ENG_START_HESIT: 0
     TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 34
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0
+    TOYOTA_ISC_FLOW: 13.80737
+    TOYOTA_ISC_LEARN: 8.64258
+    TOYOTA_ISC_POS: 8.68225
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 11
+    TOYOTA_PREV_TRIP_DST: 0.22
+    TOYOTA_PREV_TRIP_EOT: 68
+    TOYOTA_PREV_TRIP_IAT: 23
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 89
+    TOYOTA_VVT_ADV_FAIL: 0
   response: |-
     7E81023615100000587
     7E821010016813F4A6C
@@ -915,7 +961,30 @@ test_cases:
     7E82480008000800080
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 13
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1117.1875
+    TOYOTA_ENG_START_HESIT: 0
     TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 24
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: -0.3833
+    TOYOTA_ISC_FLOW: 12.11914
+    TOYOTA_ISC_LEARN: 7.79419
+    TOYOTA_ISC_POS: 7.89642
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 13
+    TOYOTA_PREV_TRIP_DST: 0.14
+    TOYOTA_PREV_TRIP_EOT: 24
+    TOYOTA_PREV_TRIP_IAT: 17
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 42
+    TOYOTA_VVT_ADV_FAIL: 0
   response: |-
     7E81023615100000596
     7E82101000E52394040
@@ -1020,7 +1089,30 @@ test_cases:
     7E82480008000800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 22
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1199.21875
+    TOYOTA_ENG_START_HESIT: 0
     TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 55
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0
+    TOYOTA_ISC_FLOW: 8.08594
+    TOYOTA_ISC_LEARN: 7.79663
+    TOYOTA_ISC_POS: 5.7373
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 22
+    TOYOTA_PREV_TRIP_DST: 0
+    TOYOTA_PREV_TRIP_EOT: 56
+    TOYOTA_PREV_TRIP_IAT: 25
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 81
+    TOYOTA_VVT_ADV_FAIL: 0
   response: |-
     7E810236151000005FF
     7E82101000079415F60
