--- a/tests/test_cases/2019/commands/7E0.7E8.2145.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2145.yaml
@@ -43,7 +43,7 @@ test_cases:
   response: |-
     7E81015614501000000
     7E82100000000000000
-    7E8220001FD0000CA00
+    7E8220001FE0000BF00
     7E82380000000000000
 - expected_values:
     TOYOTA_ALL_CYLINDERS_MISFIRE_CNT: 0
@@ -89,4 +89,19 @@ test_cases:
     7E81015614501000000
     7E82100000000010000
     7E8220202A40000B300
+    7E82380000000000000
+- expected_values:
+    TOYOTA_ALL_CYLINDERS_MISFIRE_CNT: 0
+    TOYOTA_CYL1_MISFIRE_CNT: 0
+    TOYOTA_CYL2_MISFIRE_CNT: 1
+    TOYOTA_CYL3_MISFIRE_CNT: 0
+    TOYOTA_CYL4_MISFIRE_CNT: 0
+    TOYOTA_IGNITION_TRIG_CNT: 0
+    TOYOTA_MISFIRE_LOAD_V2: 0
+    TOYOTA_MISFIRE_MARGIN_V2: -128
+    TOYOTA_MISFIRE_RPM_V2: 0
+  response: |-
+    7E81015614501000000
+    7E82101000000000000
+    7E8220103190000AF00
     7E82380000000000000
